- Dropped from API User transformer, activities, rewards and badges in favor or new  new user endpoints. ( /friends/api/user/{user}/activities, /friends/api/user/{user}/badges, /friends/api/user/{user}/rewards ) - Added option to set router name to Additional API routes. - API documentation updates.
